--- a/templates/base.html
+++ b/templates/base.html
@@ -40,19 +40,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- //top-header -->
 
 	{% for message in messages%}
-                    <div class="alert alert-success" role="alert">
-                      {{message}}
-                    </div>
-                    {% endfor %}
+		<div class="alert alert-success alert-dismissible" role="alert">
+			{{message}}
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+			  <span aria-hidden="true">&times;</span>
+			</button>
+		</div>
+	{% endfor %} 
 
-	{% comment %} {% for message in messages%}
-	<div class="alert alert-warning alert-dismissible fade show" role="alert">
-		 {{message}}
-		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-		  <span aria-hidden="true">&times;</span>
-		</button>
-	</div>
-	{% endfor %} {% endcomment %}
+
 	
 	<!-- header-bot-->
 	<div class="header-bot">
@@ -90,11 +86,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<span class="fa fa-pencil-square-o" aria-hidden="true"></span> Sign Up </a>
 						</li>
 					{% endif %}
-
+					
+					{% if user.is_authenticated %}
 					<li>
-						<a href="#" data-toggle="modal" data-target="#myModal2">
-							<span class="fa fa-pencil-square-o" aria-hidden="true"></span>{{user.first_name}}</a>
+						<a href="" >
+							<span class="fa fa-user" aria-hidden="true"></span>{{user.first_name}}</a>
 					</li>
+					<li>
+						<a href="logout" >
+							<span class="fa fa-sign-out" aria-hidden="true"></span>LogOut</a>
+					</li>
+					{% endif %}
 				</ul>
 				<!-- //header lists -->
 				<!-- search -->
@@ -382,69 +384,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										</div>
 									</ul>
 								</li>
-								<li class="dropdown">
-									<a href="#" class="dropdown-toggle nav-stylehead" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Kitchen
-										<span class="caret"></span>
-									</a>
-									<ul class="dropdown-menu multi-column columns-3">
-										<div class="agile_inner_drop_nav_info">
-											<div class="col-sm-4 multi-gd-img">
-												<ul class="multi-column-dropdown">
-													<li>
-														<a href="product">Bakery</a>
-													</li>
-													<li>
-														<a href="product">Baking Supplies</a>
-													</li>
-													<li>
-														<a href="product.html">Coffee, Tea & Beverages</a>
-													</li>
-													<li>
-														<a href="product.html">Dried Fruits, Nuts</a>
-													</li>
-													<li>
-														<a href="product.html">Sweets, Chocolate</a>
-													</li>
-													<li>
-														<a href="product.html">Spices & Masalas</a>
-													</li>
-													<li>
-														<a href="product.html">Jams, Honey & Spreads</a>
-													</li>
-												</ul>
-											</div>
-											<div class="col-sm-4 multi-gd-img">
-												<ul class="multi-column-dropdown">
-													<li>
-														<a href="product.html">Pickles</a>
-													</li>
-													<li>
-														<a href="product.html">Pasta & Noodles</a>
-													</li>
-													<li>
-														<a href="product.html">Rice, Flour & Pulses</a>
-													</li>
-													<li>
-														<a href="product.html">Sauces & Cooking Pastes</a>
-													</li>
-													<li>
-														<a href="product.html">Snack Foods</a>
-													</li>
-													<li>
-														<a href="product.html">Oils, Vinegars</a>
-													</li>
-													<li>
-														<a href="product.html">Meat, Poultry & Seafood</a>
-													</li>
-												</ul>
-											</div>
-											<div class="col-sm-4 multi-gd-img">
-												<img src="{% static 'images/nav.png' %}" alt="">
-											</div>
-											<div class="clearfix"></div>
-										</div>
-									</ul>
-								</li>
+								
 								<li class="dropdown">
 									<a href="#" class="dropdown-toggle nav-stylehead" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Household
 										<span class="caret"></span>
