01-nav bar dynamic search fun working

--- a/templates/base.html
+++ b/templates/base.html
@@ -91,7 +91,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					
 					{% if user.is_authenticated %}
 					<li>
-						<a href="" >
+						<a href="#" data-toggle="modal" data-target="#myModal3" >
 							<span class="fa fa-user" aria-hidden="true"></span>{{user.first_name}}</a>
 					</li>
 					<li>
@@ -103,8 +103,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<!-- //header lists -->
 				<!-- search -->
 				<div class="agileits_search">
-					<form action="#" method="post">
-						<input name="Search" type="search" placeholder="How can we help you today?" required="">
+					<form id="search_form" name="gs" method="GET" action="/default_search">
+						<input name="search" type="search" placeholder="How can we help you today?" required="">
 						<button type="submit" class="btn btn-default" aria-label="Left Align">
 							<span class="fa fa-search" aria-hidden="true"> </span>
 						</button>
@@ -150,7 +150,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<a href="#" data-toggle="modal" data-target="#myModal2">
 								Sign Up Now</a>
 						</p>
-						<form action="login" method="post">
+						<form action="/login" method="post">
 							{% csrf_token %}
 							<div class="styled-input agile-styled-input-top">
 								<input type="email" placeholder="Email" name="email" required="">
@@ -188,7 +188,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<p>
 							Come join the Grocery Shoppy! Let's set up your Account.
 						</p>
-						<form action="signup" method="post">
+						<form action="/signup" method="post">
 							{% csrf_token %}
 							<div class="styled-input agile-styled-input-top">
 								<input type="text" placeholder="Name" name="name" required="">
@@ -215,252 +215,53 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 	<!-- //Modal2 -->
 	<!-- //signup Model -->
-	<!-- //header-bot -->
-	<!-- navigation -->
-	<div class="ban-top">
-		<div class="container">
-			<div class="agileits-navi_search">
-				<form action="#" method="post">
-					<select id="agileinfo-nav_search" name="agileinfo_search" required="" onchange="location = this.value;">
-						<option value="">All Categories</option>
-						<option value="product">Kitchen</option>
-						<option value="product">Household</option>
-						<option value="product">Snacks & Beverages</option>
-						<option value="product">Personal Care</option>
-						<option value="product">Gift Hampers</option>
-						<option value="product">Fruits & Vegetables</option>
-						<option value="product">Baby Care</option>
-						<option value="product">Soft Drinks & Juices</option>
-						<option value="product">Frozen Food</option>
-						<option value="product">Bread & Bakery</option>
-						<option value="product">Sweets</option>
-						
-					</select>
-				</form>
-			</div>
-			<div class="top_nav_left">
-				<nav class="navbar navbar-default">
-					<div class="container-fluid">
-						<!-- Brand and toggle get grouped for better mobile display -->
-						<div class="navbar-header">
-							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
-							    aria-expanded="false">
-								<span class="sr-only">Toggle navigation</span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-							</button>
-						</div>
-						<!-- Collect the nav links, forms, and other content for toggling -->
-						<div class="collapse navbar-collapse menu--shylock" id="bs-example-navbar-collapse-1">
-							<ul class="nav navbar-nav menu__list">
-								<li class="active">
-									<a class="nav-stylehead" href="/">Home
-										<span class="sr-only">(current)</span>
-									</a>
-								</li>
-								
-								<li class="dropdown">
-									<a href="#" class="dropdown-toggle nav-stylehead" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Kitchen
-										<span class="caret"></span>
-									</a>
-									<ul class="dropdown-menu multi-column columns-3">
-										<div class="agile_inner_drop_nav_info">
-											<div class="col-sm-4 multi-gd-img">
-												<ul class="multi-column-dropdown">
-													<li>
-														<a href="product">Bakery</a>
-													</li>
-													<li>
-														<a href="product">Baking Supplies</a>
-													</li>
-													<li>
-														<a href="product">Coffee, Tea & Beverages</a>
-													</li>
-													<li>
-														<a href="product">Dried Fruits, Nuts</a>
-													</li>
-													<li>
-														<a href="product">Sweets, Chocolate</a>
-													</li>
-													<li>
-														<a href="product">Spices & Masalas</a>
-													</li>
-													<li>
-														<a href="product">Jams, Honey & Spreads</a>
-													</li>
-												</ul>
-											</div>
-											<div class="col-sm-4 multi-gd-img">
-												<ul class="multi-column-dropdown">
-													<li>
-														<a href="product">Pickles</a>
-													</li>
-													<li>
-														<a href="product">Pasta & Noodles</a>
-													</li>
-													<li>
-														<a href="product">Rice, Flour & Pulses</a>
-													</li>
-													<li>
-														<a href="product">Sauces & Cooking Pastes</a>
-													</li>
-													<li>
-														<a href="product">Snack Foods</a>
-													</li>
-													<li>
-														<a href="product">Oils, Vinegars</a>
-													</li>
-													<li>
-														<a href="product">Meat, Poultry & Seafood</a>
-													</li>
-												</ul>
-											</div>
-											<div class="col-sm-4 multi-gd-img">
-												<img src="{% static 'images/nav.png' %}" alt="">
-											</div>
-											<div class="clearfix"></div>
-										</div>
-									</ul>
-								</li>
-								<li class="dropdown">
-									<a href="#" class="dropdown-toggle nav-stylehead" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Kitchen
-										<span class="caret"></span>
-									</a>
-									<ul class="dropdown-menu multi-column columns-3">
-										<div class="agile_inner_drop_nav_info">
-											<div class="col-sm-4 multi-gd-img">
-												<ul class="multi-column-dropdown">
-													<li>
-														<a href="product">Bakery</a>
-													</li>
-													<li>
-														<a href="product">Baking Supplies</a>
-													</li>
-													<li>
-														<a href="product">Coffee, Tea & Beverages</a>
-													</li>
-													<li>
-														<a href="product">Dried Fruits, Nuts</a>
-													</li>
-													<li>
-														<a href="product">Sweets, Chocolate</a>
-													</li>
-													<li>
-														<a href="product">Spices & Masalas</a>
-													</li>
-													<li>
-														<a href="product">Jams, Honey & Spreads</a>
-													</li>
-												</ul>
-											</div>
-											<div class="col-sm-4 multi-gd-img">
-												<ul class="multi-column-dropdown">
-													<li>
-														<a href="product">Pickles</a>
-													</li>
-													<li>
-														<a href="product">Pasta & Noodles</a>
-													</li>
-													<li>
-														<a href="product">Rice, Flour & Pulses</a>
-													</li>
-													<li>
-														<a href="product">Sauces & Cooking Pastes</a>
-													</li>
-													<li>
-														<a href="product">Snack Foods</a>
-													</li>
-													<li>
-														<a href="product">Oils, Vinegars</a>
-													</li>
-													<li>
-														<a href="product">Meat, Poultry & Seafood</a>
-													</li>
-												</ul>
-											</div>
-											<div class="col-sm-4 multi-gd-img">
-												<img src="{% static 'images/nav.png' %}" alt="">
-											</div>
-											<div class="clearfix"></div>
-										</div>
-									</ul>
-								</li>
-								
-								<li class="dropdown">
-									<a href="#" class="dropdown-toggle nav-stylehead" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Household
-										<span class="caret"></span>
-									</a>
-									<ul class="dropdown-menu multi-column columns-3">
-										<div class="agile_inner_drop_nav_info">
-											<div class="col-sm-6 multi-gd-img">
-												<ul class="multi-column-dropdown">
-													<li>
-														<a href="product2.html">Kitchen & Dining</a>
-													</li>
-													<li>
-														<a href="product2.html">Detergents</a>
-													</li>
-													<li>
-														<a href="product2.html">Utensil Cleaners</a>
-													</li>
-													<li>
-														<a href="product2.html">Floor & Other Cleaners</a>
-													</li>
-													<li>
-														<a href="product2.html">Disposables, Garbage Bag</a>
-													</li>
-													<li>
-														<a href="product2.html">Repellents & Fresheners</a>
-													</li>
-													<li>
-														<a href="product2.html"> Dishwash</a>
-													</li>
-												</ul>
-											</div>
-											<div class="col-sm-6 multi-gd-img">
-												<ul class="multi-column-dropdown">
-													<li>
-														<a href="product2.html">Pet Care</a>
-													</li>
-													<li>
-														<a href="product2.html">Cleaning Accessories</a>
-													</li>
-													<li>
-														<a href="product2.html">Pooja Needs</a>
-													</li>
-													<li>
-														<a href="product2.html">Crackers</a>
-													</li>
-													<li>
-														<a href="product2.html">Festive Decoratives</a>
-													</li>
-													<li>
-														<a href="product2.html">Plasticware</a>
-													</li>
-													<li>
-														<a href="product2.html">Home Care</a>
-													</li>
-												</ul>
-											</div>
-											<div class="clearfix"></div>
-										</div>
-									</ul>
-								</li>
-								<li class="">
-									<a class="nav-stylehead" href="about">About Us</a>
-								</li>
-								<li class="">
-									<a class="nav-stylehead" href="contact">Contact</a>
-								</li>
-							</ul>
-						</div>
+
+
+	<!-- profile Model -->
+	<!-- Modal3 -->
+	<div class="modal fade" id="myModal3" tabindex="-1" role="dialog">
+		<div class="modal-dialog">
+			<!-- Modal content-->
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+				</div>
+				<div class="modal-body modal-body-sub_agile">
+					<div class="main-mailposi">
+						<span class="fa fa-envelope-o" aria-hidden="true"></span>
 					</div>
-				</nav>
+					<div class="modal_body_left modal_body_left1">
+						<h3 class="agileinfo_sign">Profile</h3>
+						<p>
+							Update your profile details.
+						</p>
+						<form action="/profile" method="post">
+							{% csrf_token %}
+							<div class="styled-input agile-styled-input-top">
+								<input type="text" placeholder="Your Name = {{user.first_name}}" name="name" required="">
+							</div>
+							<div class="styled-input">
+								<input type="email" placeholder="Your E-mail = {{user.email}}" name="email" required="">
+							</div>
+							<div class="styled-input">
+								<input type="text" placeholder="Your Mobile No. = {{user.mobile_no}}" name="mobile_no" id="mobile_no" required="">
+							</div>
+							<div class="styled-input">
+								<input type="text" placeholder="Your Address = {{address}}" name="address" id="address" required="">
+							</div>
+							<input type="submit" value="Update Profile">
+						</form>
+						
+					</div>
+				</div>
 			</div>
+			<!-- //Modal content-->
 		</div>
 	</div>
-	<!-- //navigation -->
+	<!-- //Modal2 -->
+	<!-- //signup Model -->
+	<!-- //header-bot -->
+	
 
     {% block content %} {% endblock %}
 
